--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/cessate/assets/cessate-HBGl_ZnG.svg" />
     <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Dynapuff&family=Inconsolata:wght@400;700&display=swap"
+      as="style"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Dynapuff&family=Inconsolata:wght@400;700&display=swap"
       rel="stylesheet"
     />
