--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/cessate.svg" />
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Dynapuff:wght@400;500&family=Inconsolata:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Inconsolata:wght@400;700&display=swap"
       as="style"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Dynapuff:wght@400;500&family=Inconsolata:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Inconsolata:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
