--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cessate</title>
+    <meta name="description" content="A habit cessation tool.">
+
+    <link rel="apple-touch-icon" href="/192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="/512.png" sizes="512x512">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Inconsolata:wght@200..900&family=Roboto:wdth,wght@75,100..900&display=swap" rel="stylesheet">
-    
-    <link rel="apple-touch-icon" href="/192.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="/512.png" sizes="512x512">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cessate</title>
   </head>
   <body>
     <div id="root"></div>
