--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cessate</title>
     <meta name="description" content="A habit cessation tool.">
+    <link rel="icon" href="/favicon.ico">
 
     <link rel="apple-touch-icon" href="/192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="/512.png" sizes="512x512">
+
+    <link rel="preload" href="/assets/smoking.svg" as="image">
+    <link rel="preload" href="/assets/no_smoking.svg" as="image">
+    <link rel="preload" href="/assets/history.svg" as="image">
+    <link rel="preload" href="/assets/delete.svg" as="image">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
