--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cessate</title>
-    <meta name="description" content="A habit cessation tool.">
-    <link rel="icon" href="/favicon.ico">
+    <meta name="description" content="A habit cessation tool." />
+    <link rel="icon" href="/favicon.ico" />
 
-    <link rel="apple-touch-icon" href="/192.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="/512.png" sizes="512x512">
+    <link rel="apple-touch-icon" href="/192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="/512.png" sizes="512x512" />
 
-    <link rel="preload" href="/assets/smoking.svg" as="image">
-    <link rel="preload" href="/assets/no_smoking.svg" as="image">
-    <link rel="preload" href="/assets/history.svg" as="image">
-    <link rel="preload" href="/assets/delete.svg" as="image">
+    <link rel="preload" href="/assets/smoking.svg" as="image" />
+    <link rel="preload" href="/assets/no_smoking.svg" as="image" />
+    <link rel="preload" href="/assets/history.svg" as="image" />
+    <link rel="preload" href="/assets/delete.svg" as="image" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Inconsolata:wght@200..900&family=Roboto:wdth,wght@75,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chewy&family=Inconsolata:wght@200..900&family=Roboto:wdth,wght@75,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
